WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70380
Stop leaking internal names in WKView API header
https://bugs.webkit.org/show_bug.cgi?id=70380
Summary
Stop leaking internal names in WKView API header
Sam Weinig
Reported
2011-10-18 16:14:06 PDT
Stop leaking internal names in WKView API header
Attachments
Patch
(4.07 KB, patch)
2011-10-18 16:16 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-10-18 16:16:07 PDT
Created
attachment 111521
[details]
Patch
Anders Carlsson
Comment 2
2011-10-18 16:17:49 PDT
Comment on
attachment 111521
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111521&action=review
> Source/WebKit2/ChangeLog:9 > + WKView due to the 32 objective-c ABI, we must rename the existing variable unused. If
This should say either "32-bit Objective-C ABI" or "fragile Objective-C ABI"
> Source/WebKit2/ChangeLog:10 > + drop 32 bit support, we will be able to remove it.
"32-bit"
Sam Weinig
Comment 3
2011-10-18 16:24:38 PDT
Committed
r97811
: <
http://trac.webkit.org/changeset/97811
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug