Stop leaking internal names in WKView API header https://bugs.webkit.org/show_bug.cgi?id=70380

Reviewed by Anders Carlsson.

Move _frameSizeUpdatesDisabledCount to WKViewData. Since we cannot change the size of
WKView due to the fragile Objective-C ABI, we must rename the existing variable unused. If
drop 32-bit support, we will be able to remove it.

* UIProcess/API/mac/WKView.h:
* UIProcess/API/mac/WKView.mm:
(-[WKView disableFrameSizeUpdates]):
(-[WKView enableFrameSizeUpdates]):
(-[WKView frameSizeUpdatesDisabled]):
* WebKit2.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/86528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97811 268f45cc-cd09-0410-ab3c-d52691b4dbfc